src/components/Details/styles/menudetails.css
/* Chef at home mobile */

.cah-div{
    width: 95vw;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    grid-auto-rows: 24.7rem;
    justify-content: space-between;
    margin: 1em auto 2em auto;
    margin-inline: auto;
    overflow: hidden;
    cursor: pointer;
}
.cah-card:hover{
    box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.17);
}

.cah-card{
    box-shadow: 0px 4.94185px 4.94185px 0px rgba(0, 0, 0, 0.04);
    position: relative;
    width: 20vw;
    height: fit-content;
    padding-bottom: 1rem;
    border-radius: 15px;
    margin-bottom: 1rem;
}
.cah-img{
    width: 100%;
}
    .cah-heart{
        position: absolute;
        top: 0.3em;
        right: 0.5em;
        color: #fff;
        font-size: 1.6em;
        font-weight: 700;
    }
    .cah-cuisine{
        position: absolute;
        left: 1em;
        top: 1em;
        background: #fff;
        border-radius: 1.875rem;
        padding: 0.5em;
        color: #323335;
        text-align: center;
        font-size: 0.625rem;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
        width: 4.4375rem;
        height: 1.4375rem;
    }
    .m-up{
        position: relative;
        bottom: 3em;
    }
.namenpr{

    margin: 1em;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.namenpr p{
    color: #FFF;
    font-size: 0.875rem;
    font-weight: 600;
    line-height: 1.25rem;
}
.namenpr span{
    color: #FCC01C;
    font-size: 1rem;
    font-style: normal;
    font-weight: 700;
    line-height: 1.5rem;
}
.cah-desc{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-inline: 1em;
}
.cah-desc svg{
    color: #fcc01c
}
.cah-det{
    display: flex;
    gap: 5px;
}
.ce-det{
    display: flex;
    flex-direction: column;
    width:7.7rem
}
.ce-nm{
    display: flex;
    gap: 3px;
    align-items: center;
    color: #323335;
    font-size: 0.75rem;
    font-style: normal;
    font-weight: 500;
}
.desc-flex{
    display: flex;
    align-items:center;
    gap: 5px;
}
.ce-loc,
.oc-rev{
    color: rgba(50, 51, 53, 0.80);
    font-size: 0.625rem;
    font-style: normal;
    font-weight: 400;
    display: flex;
    gap: 3px;
    align-items: center;
}
.ce-rating,
.oc-rating{
    font-weight: 500;
    font-size: 14px;
    display: flex;
    align-items: center;
    gap: 3px;
}

/* large events mobile */

.event-dets{
    margin-top: 2em;
    background: red;
}
.event-dets svg{
    color: #fcc01c;
}
.event-dets .f-col{
    margin: 1em 0 1em 1em;
    border-bottom: 1px solid #ebebeb
}
.img-po,
 .price-pos,
 .c-rate-pos{
    position: absolute;
    bottom: 5em;
    right: 1em;
}
.price-pos,
 .c-rate-pos{
    bottom: 8.2em;
    left: 1em;
    color: #fff;
    font-size: 0.875rem;
}
.low-desc{
    width: 65%;
    margin-left: 1em;
    display: flex;
    justify-content: space-between;
    color: rgba(50, 51, 53, 0.70);
    font-size: 0.75rem;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}
.mp-desc{
    display: flex;
    justify-content: space-between;
    margin-inline: 1em;
}

.expe{
    width: 18rem;
    color: #6F6E6D;
    font-size: 0.625rem;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    margin: 2.3em auto;
}
.c-rate-pos,
.oc-nm,
.oc-rev{
    color: #fff;
}

.oc-rating svg{
        color: #fcc01c
    }
.oc-nm{
    font-size: 1rem;
    font-style: normal;
    font-weight: 600;
    line-height: 1.5rem;
}

